--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagne</a>
+    <a href="recipes/lasagna.html">Erdbeereis</a>
+    <a href="recipes/lasagna.html">Kuchen</a>
 </body>
 </html>
