Links korrigiert - hoffentlich...

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagne</a>
     <p></p>
-    <a href="recipes/lasagna.html">Erdbeereis</a>
+    <a href="recipes/Erdbeereis.html">Erdbeereis</a>
     <p></p>
-    <a href="recipes/lasagna.html">Kuchen</a>
+    <a href="recipes/Kuchen.html">Kuchen</a>
 </body>
 </html>
