--- a/recipes/Kuchen.html
+++ b/recipes/Kuchen.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href ="styles.css">
 </head>
 <body>
-    <h1>Kuchen</h1>>
+    <h1>Kuchen</h1>
     <img src="https://www.gutekueche.at/storage/media/recipe/31738/resp/einfacher-guglhupf___webp_620_413.webp">
     <h2>Description</h2>
     <p>Schnell gemacht</p>
